fix: keep masthead titles right-aligned on mobile

--- a/scss/grayscale.scss
+++ b/scss/grayscale.scss
@@ -75,8 +75,6 @@ footer {
     .masthead-text {
       max-width: 100%;
       padding-right: 1rem;
-      text-align: center !important;
-      margin-left: auto !important;
     }
   }
 }
